force-app/main/default/objects/LinkedListing_hz__c/LinkedListing_hz__c.object-meta.xml
<CustomObject>
    <label>Linked Listing</label>
    <nameField>
        <displayFormat>LL-{000000}</displayFormat>
        <label>Linked Listing ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Listings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>