force-app/main/default/objects/LinkedListing_hz__c/fields/ClientFeedback__c.field-meta.xml
<CustomField>
    <fullName>ClientFeedback__c</fullName>
    <label>Last Client Feedback</label>
    <type>TextArea</type>
</CustomField>