force-app/main/default/objects/LinkedListing_hz__c/fields/ClientFeedback_hz__c.field-meta.xml
<CustomField>
    <fullName>ClientFeedback_hz__c</fullName>
    <label>Last Client Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>