force-app/main/default/objects/LinkedListing_hz__c/fields/ContactMobile_hz__c.field-meta.xml
<CustomField>
    <fullName>ContactMobile_hz__c</fullName>
    <formula>Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Mobile</label>
    <type>Text</type>
</CustomField>