force-app/main/default/objects/LinkedListing_hz__c/fields/ContactPhone_hz__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone_hz__c</fullName>
    <formula>Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>