force-app/main/default/objects/LinkedListing_hz__c/fields/Email_Sent_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_Opt_Out__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Email Sent Opt Out</label>
    <type>Checkbox</type>
</CustomField>