force-app/main/default/objects/LinkedListing_hz__c/fields/Inquiry_hz__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_hz__c</fullName>
    <label>Inquiry</label>
    <referenceTo>Inquiry_hz__c</referenceTo>
    <relationshipLabel>Linked Listings</relationshipLabel>
    <relationshipName>Favorites</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>