force-app/main/default/objects/LinkedListing_hz__c/fields/Listing_hz__c.field-meta.xml
<CustomField>
    <fullName>Listing_hz__c</fullName>
    <label>Listing</label>
    <referenceTo>Listing_hz__c</referenceTo>
    <relationshipLabel>Linked To</relationshipLabel>
    <relationshipName>Favorites</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>