force-app/main/default/objects/LinkedListing_hz__c/fields/Listing_Status__c.field-meta.xml
<CustomField>
    <fullName>Listing_Status__c</fullName>
    <formula>Text(Listing_hz__r.Status__c)</formula>
    <label>Listing Status</label>
    <type>Text</type>
</CustomField>