force-app/main/default/objects/LinkedListing_hz__c/fields/ListingPrice_hz__c.field-meta.xml
<CustomField>
    <fullName>ListingPrice_hz__c</fullName>
    <formula>Listing_hz__r.ListingPrice_hz__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>