force-app/main/default/objects/LinkedListing_hz__c/fields/ListingStatus_hz__c.field-meta.xml
<CustomField>
    <fullName>ListingStatus_hz__c</fullName>
    <formula>Text(Listing_hz__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Listing Status</label>
    <type>Text</type>
</CustomField>