force-app/main/default/objects/LinkedListing_hz__c/fields/Price_from_Listing__c.field-meta.xml
<CustomField>
    <fullName>Price_from_Listing__c</fullName>
    <formula>Listing_hz__r.ListingPrice_hz__c</formula>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>