force-app/main/default/objects/LinkedListing_hz__c/fields/Property_hz__c.field-meta.xml
<CustomField>
    <fullName>Property_hz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property_hz__c</referenceTo>
    <relationshipLabel>Linked To</relationshipLabel>
    <relationshipName>Favorites</relationshipName>
    <type>Lookup</type>
</CustomField>