force-app/main/default/objects/LinkedListing_hz__c/fields/Rating_hz__c.field-meta.xml
<CustomField>
    <fullName>Rating_hz__c</fullName>
    <label>Client Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
                <default>true</default>
                <label>-</label>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>