force-app/main/default/objects/LinkedListing_hz__c/fields/RatingImage__c.field-meta.xml
<CustomField>
    <fullName>RatingImage__c</fullName>
    <formula>CASE( TEXT(Rating_hz__c), 
&quot;1&quot;, IMAGE(&quot;/img/samples/stars_100.gif&quot;, &quot;rating&quot;), 
&quot;2&quot;, IMAGE(&quot;/img/samples/stars_200.gif&quot;, &quot;rating&quot;), 
&quot;3&quot;, IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;rating&quot;), 
&quot;4&quot;, IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;rating&quot;), 
&quot;5&quot;, IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;rating&quot;), 
IMAGE(&quot;/img/samples/stars_000.gif&quot;, &quot;rating&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>***</label>
    <type>Text</type>
</CustomField>