force-app/main/default/objects/LinkedListing_hz__c/fields/Recommendation_hz__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_hz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommendation</label>
    <referenceTo>Recommendation_hz__c</referenceTo>
    <relationshipLabel>Recommended Listings</relationshipLabel>
    <relationshipName>Favorites</relationshipName>
    <type>Lookup</type>
</CustomField>