force-app/main/default/objects/LinkedListing_hz__c/fields/SMS_Sent_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sent_Opt_Out__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SMS Sent Opt Out</label>
    <type>Checkbox</type>
</CustomField>