force-app/main/default/objects/LinkedListing_hz__c/fields/SystemHasBeenSent__c.field-meta.xml
<CustomField>
    <fullName>SystemHasBeenSent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Internally used. Don&apos;t include this field on Pagelayouts and please never change manually.</inlineHelpText>
    <label>Has Been Sent</label>
    <type>Checkbox</type>
</CustomField>