force-app/main/default/objects/LinkedListing_hz__c/fields/SystemSentDateTime__c.field-meta.xml
<CustomField>
    <fullName>SystemSentDateTime__c</fullName>
    <inlineHelpText>Internally used. Don&apos;t include this field on Pagelayouts and please never change manually.</inlineHelpText>
    <label>Last Sent On</label>
    <type>DateTime</type>
</CustomField>