force-app/main/default/objects/LinkedListing_hz__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Contact__r.FirstName &amp;&quot; &quot;&amp; Contact__r.LastName &amp;&quot; &quot;&amp;&quot;-&quot;&amp;&quot; &quot;&amp; Listing_hz__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>