force-app/main/default/objects/LinkedListing_hz__c/recordTypes/Generic.recordType-meta.xml
<RecordType>
    <fullName>Generic</fullName>
    <active>true</active>
    <label>Generic</label>
</RecordType>